--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -3,5 +3,8 @@ asset_index:
     open-in: "Open in (以...開啟)"
     open-in-explorer: "Open In File Explorer (以檔案管理員開啟)"
     checkout-revision: "Checkout Commit...(切換到提交...)"
-    changes-tab: "Changes(變更頁面)"
-    all-commits-tab: "All Commits(所有變更提交)"
+    changes-tab: " Changes (變更頁面)"
+    all-commits-tab: " All Commits (所有變更提交)"
+    unstaged-changes: " Unstaged Changes (未核選變更)"
+    staged-changes: " Staged Changes (核選的變更)"
+    act-stage: " Stage (核選)"
