--- a/example/course-resources/fork/level-data/commit-one-file-index.yaml
+++ b/example/course-resources/fork/level-data/commit-one-file-index.yaml
@@ -154,11 +154,17 @@ asset_index:
 
     explain-staging: |+2
       .md
-      在本章節中，我們學會了如何增加一個新的版本歷史到${{t/repo}}  
+      上面的驗證步驟，證明了我們成功增添了新的版本歷史到${{t/repo}}中！
 
-      現在讓我們來回想一下圖(一)所介紹的大致流程  
-      當初其實刻意把某一個橋段給匆匆帶過  
-      那就是「3. 把${{t/work-tree}}複製一份到${{t/repo}}裡面」以及「4. 把${{t/file-tree}}包裝成圓點，跟紅色圓點串起來」  
+      現在讓我們來回顧一下圖(一)所介紹的大致流程  
+      有  
+      1. 修改資料夾的內容，讓${{t/work-tree}}變成綠色的
+      2. 複製一份${{t/file-tree}}到${{t/repo}}裡面
+      3. 把${{t/file-tree}}包裝成圓點，跟紅色圓點串起來
+      4. 完成新增版本  
+
+      當我們仔細的觀察就會發現
+      其實其中的 2. 與 3. 的步驟是匆匆帶過，並沒有明確說明要如何達成  
 
       實際上我們到底是如何完成的呢？  
       其實是拆分成了三步來完成的，請參考以下圖(九-1)與圖(九-2)所築格顯示的步驟  
