--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "scripts": {
     "==== Node ====": "",
     "test": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\"",
-    "check-course": "mocha \"./test/tests/course-validity.js\"",
+    "check-course": "npm run \"load-native-node\" && mocha \"./test/tests/course-validity.js\"",
     "test-core": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "test-remote": "mocha \"./playground/remote.js\"",
     "==== Electron ====": "",
     "start": "npm run \"load-native-electron\" && electron .",
     "rebuild": "npm run \"load-native-electron\" && electron-rebuild -f --version 4.2.2 -w nodegit",
-    "echeck-course": "electron-mocha \"./test/tests/course-validity.js\"",
+    "echeck-course": "npm run \"load-native-electron\" && electron-mocha \"./test/tests/course-validity.js\"",
     "etest": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\"",
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
