--- a/example/course-resources/fork/level-data/commit-one-file-index.yaml
+++ b/example/course-resources/fork/level-data/commit-one-file-index.yaml
@@ -130,7 +130,7 @@ asset_index:
 
     checkout-previous-revision: |+2
       .md
-      為了驗證新增加的版本歷史確實有記錄下我們新增加的檔案，讓我們切換到不同的版本歷史看看  
+      為了驗證新增加的版本歷史確實有記錄下我們新增加的檔案，讓我們切換到不同的版本歷史試試看  
 
       請操作${{t/gui}}的${{t/graph}}介面，切換到「第 6 號提交」  
 
@@ -159,16 +159,16 @@ asset_index:
       現在讓我們來回顧一下圖(一)所介紹的大致流程  
       有  
       1. 資料夾的最初狀態
-      2. 修改資料夾的內容，讓${{t/work-tree}}變成綠色的
+      2. 修改資料夾的內容
       3. 複製一份${{t/file-tree}}到${{t/repo}}裡面
-      4. 把${{t/file-tree}}包裝成圓點，跟紅色圓點串起來
+      4. 把${{t/file-tree}}包裝成圓點，跟前一個圓點串起來
       5. 完成新增版本  
 
       當我們仔細的觀察就會發現
       其實其中的 3. 與 4. 的步驟是匆匆帶過，並沒有明確說明要如何達成  
 
       實際上我們到底是如何完成的呢？  
-      其實是拆分成三步來完成的，請參考以下圖(九)所逐格顯示的第 3. 到 5. 步驟   
+      其實是拆分成三步來完成的。請參考以下圖(九)所逐格顯示的第 3. 到 5. 步驟   
 
       ![illustration]({{images/brief-commit-concept}})  
       <div class="img-title">圖(九)</div>  
