--- a/example/course-resources/fork/level-data/commit-one-file-index.yaml
+++ b/example/course-resources/fork/level-data/commit-one-file-index.yaml
@@ -206,10 +206,13 @@ asset_index:
     conclusion: |+2
       .md
       現在，我們終於能充分的了解新增一個版本背後所發生的事情  
-      從圖(九)左半可以注意到，我們的概念圖裡面出現了一個新的區域－－中間的暫存區  
+      但是在整個操作的過程中，也埋下了新的謎團：  
 
-      這個暫存區到底有甚麼功用，又應該如何使用呢？  
-      我們將在這一章剩下的小節繼續圍繞著它來介紹，敬請期待～
+      1. 從圖(九)左半可以注意到，我們的概念圖裡面出現了一個新的區域－－中間的暫存區  
+         這個暫存區到底有甚麼功用，又應該如何使用呢？  
+      2. 出現了兩個陌生的字眼： ${{t/staged-en}}、${{t/unstaged-en}}。他們是甚麼意思呢？
+
+      這些謎團都將在這一章剩下的小節逐漸解開，敬請期待～
 
 # course materials
     empty: ""
