--- a/example/course-resources/fork/levels/commit-files-separately.yaml
+++ b/example/course-resources/fork/levels/commit-files-separately.yaml
@@ -38,10 +38,9 @@
       needConfirm: false
     - !dev.needAction  
       actions:
-        - !act.stage 
+        - !dev.act.git 
           repoSetupName: basic
-          pathSpecs:
-            - new1.txt
+          arguments: [ "add", "--", "new1.txt" ]
     - !verifyRepo 
       referenceName: "stage-new1"
 
@@ -56,8 +55,24 @@
     - !verifyRepo 
       referenceName: "commit-new1"
 
-    - !elaborate 
-      descriptionId: "level-data/commit-files-separately/"
+    - !illustrate  
+      descriptionId: "level-data/commit-files-separately/explain-separate-commit-by-index"
+
+  # instrut commit new2.txt
+
+    - !instruct 
+      descriptionId: "level-data/commit-files-separately/stage-second"
+      needConfirm: false
+    - !dev.needAction  
+      actions:
+        - !dev.act.git 
+          repoSetupName: basic
+          arguments: [ "add", "--", "new2.txt" ]
+    - !verifyRepo 
+      referenceName: "stage-new2"
+
+    - !illustrate 
+      descriptionId: "level-data/commit-files-separately/explain-stage"
 
       
 
