Correct missing assets

--- a/example/course-resources/fork/level-data/commit-files-separately-index.yaml
+++ b/example/course-resources/fork/level-data/commit-files-separately-index.yaml
@@ -97,7 +97,7 @@ asset_index:
 
       當我們建立${{t/repo}}的一個新版本時，內容的來源是來自於暫存區而非${{t/work-tree}}  
       因為圖(四-2)中暫存區裡只有黃色檔案，所以最後建立的${{t/revision}}只有黃色而沒有白色檔案  
-      實際上，這就正是剛才我們做的事情：從四個新檔案裏面，挑出「new1」放進暫存區，建立${{t/reivion}}  
+      實際上，這就正是剛才我們做的事情：從四個新檔案裏面，挑出「new1」放進暫存區，建立${{t/revision}}  
 
     introduce-index: |+2
       .md
@@ -106,10 +106,10 @@ asset_index:
       如果這時候想要分批的建立版本快照，我們可以透過分批把檔案放進暫存區裡面來達成  
 
       因為暫存區有這樣重要的功能，它也有一個正式的名字
-      那就是是**${{index-f}}**  
+      那就是是**${{t/index-f}}**  
 
       在英文的文本中我們會見到幾個其它的用詞被交替使用，例如：cache, stage  
-      在往後的章節中，我們統一使用**${{index}}**
+      在往後的章節中，我們統一使用**${{t/index}}**
       
       接下來，讓我們繼續藉由提交 new2 的變更來詳細解說如何控制**${{t/index}}**的內容
 
@@ -178,7 +178,7 @@ asset_index:
       從紅框圈選處，我們可以觀察到 new3 和 new4 兩個檔案都被列為${{t/staged}}  
       同時代表它們都被放入了${{t/index}}中
       
-      這就表示，這時候${{commit-s}}一份${{t/revision}}，就會把他們同時保存進去  
+      這就表示，這時候${{t/commit-s}}一份${{t/revision}}，就會把他們同時保存進去  
       就讓我們繼續進行下去吧  
 
     commit-remain: |+2
